# Doodle-Jump-V2

./: .gitignore  CMakeLists.txt  README.md
.circleci/: config.yml
lib/: CMakeLists.txt
lib/include/: AbstractFactory.h  BGTile.h  Collider.h  Effect.h  Model.h  Observer.h  Platform.h  Player.h  Projectile.h  Score.h  Stopwatch.h  Subject.h  Vec2D.h  World.h
lib/src/: BGTile.cc  Bonus.cc  Camera.cc  Collider.cc  Enemy.cc  Model.cc  Observer.cc  Platform.cc  Player.cc  Projectile.cc  Score.cc  Stopwatch.cc  Subject.cc  Vec2D.cc  World.cc
src/: AbstractFactory.cc  AbstractFactory.h  BGTile.cc  BGTile.h  Bonus.cc  Bonus.h  CMakeLists.txt  Camera.cc  Camera.h  Collider.cc  Collider.h  ConcreteFactory.cc  ConcreteFactory.h  Effect.cc  Effect.h  Enemy.cc  Enemy.h  Entity.cc  Entity.h  Game.cc  Game.h  MVC.cc  MVC.h  Model.cc  Model.h  Observer.h  Platform.cc  Platform.h  Player.cc  Player.h  Projectile.cc  Projectile.h  Random.cc  Random.h  Score.cc  Stopwatch.cc  Stopwatch.h  Subject.h  TextureHolder.cc  TextureHolder.h  (+7 more)
